--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ navigationVersion = "2.9.6"
 kotlinxSerializationJson = "1.9.0"
 material3 = "1.5.0-alpha09"
 workRuntimeKtx = "2.11.0"
+vico = "2.4.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +42,8 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 datetime-names = { group = "io.github.adrcotfas", name = "kotlinx-datetime-names", version = "0.1.1" }
 desugar = { group = "com.android.tools", name = "desugar_jdk_libs",  version = "2.1.5" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+vico-compose = { group = "com.patrykandpatrick.vico", name = "compose", version.ref = "vico" }
+vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
